[package]
name = "swarm-larva"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Send the drone to the target computer and startup the swarm"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }

[dependencies.diagnostic-quick]
version = "0.3.4"
features = []

[dev-dependencies]



[features]
default = []
