[package]
name = "swarm-overlord"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Send the drone to the target computer and startup the swarm"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
futures = "0.3.17"
ssh2 = "0.9.3"


[dependencies.diagnostic-quick]
version = "0.3.2"
features = []

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }


[features]
default = []
