[package]
name = "swarm-parser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Send the drone to the target computer and startup the swarm"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
peginator = "0.6.0"
unicode-ident = "1.0.5"

[dev-dependencies]



[features]
default = []
